# nushell

crates/nu-cli/src/: prompt_update.rs  repl.rs
crates/nu-command/: Cargo.toml
crates/nu-command/src/viewers/: table.rs
crates/nu-protocol/: Cargo.toml
crates/nu-protocol/src/: config.rs
crates/nu-table/: Cargo.toml
crates/nu-table/src/: table.rs
