[package]
authors = ["The Nushell Project Developers"]
description = "Nushell table printing"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-table"
edition = "2021"
license = "MIT"
name = "nu-table"
version = "0.69.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "table"
path = "src/main.rs"

[dependencies]
nu-ansi-term = "0.46.0"
nu-protocol = { path = "../nu-protocol", version = "0.69.2" }
strip-ansi-escapes = "0.1.1"
atty = "0.2.14"
serde_json = "*"
tabled = { version = "0.10.0", features = ["color"], default-features = false }
json_to_table = { version = "0.2.0", features = ["color"] }
table_to_html = { git = "https://github.com/zhiburt/tabled", rev = "2d2831f7c8bbfc2e0c72004087386849cf2229bc" }
